--- a/css/create_report.css
+++ b/css/create_report.css
@@ -1,6 +1,7 @@
 #mainEdit {
   margin-top: 20px;
-  margin-left : 15%;
+  margin-left : 20%;
+  margin-right : 5%;
   position: relative;
 }
 #tvTitle {
